Ignore internal files

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ scratch/**
 **/~*
 **/.simulations
 pymf6/tests/functional/scenarios/*.png
+pymf6/tests/functional/local_commmands.txt
+pymf6/tests/functional/scenarios/.notebooks
