--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ pymf6/tests/functional/scenarios/*.png
 pymf6/tests/functional/local_commmands.txt
 pymf6/tests/functional/scenarios/.notebooks
 **.~lock.**
+pymf6/tests/functional/scenarios/*_param.db.*
