Ignore *.stdout files

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ pymf6/tests/functional/local_commmands.txt
 pymf6/tests/functional/scenarios/.notebooks
 **.~lock.**
 pymf6/tests/functional/scenarios/*_param.db.*
+**.stdout
