--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ pymf6/tests/functional/scenarios/.notebooks
 **.~lock.**
 pymf6/tests/functional/scenarios/*_param.db.*
 **.stdout
+src/scratch/**
+src/.vscode/**
