--- a/conda_package/pymf6/meta.yaml
+++ b/conda_package/pymf6/meta.yaml
@@ -6,7 +6,7 @@ source:
 
 package:
    name: {{ project.get('name') }}
-   version:  {{ PYMF6_VERSION }}
+   version:  {{ GIT_DESCRIBE_TAG }}
 
 build:
   noarch: python
