Use function `main()`as entry point

--- a/conda_package/pymf6/meta.yaml
+++ b/conda_package/pymf6/meta.yaml
@@ -11,7 +11,7 @@ package:
 build:
   noarch: python
   entry_points:
-    - pymf6 = pymf6.main:info
+    - pymf6 = pymf6.main:main
 
 requirements:
   build:
