--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "pymf6"
 description = "High-level Python Wrapper for MODFLOW 6"
 readme = "README.md"
-requires-python = ">=3.7"
+requires-python = ">=3.8"
 keywords = ["packaging", "example"]
 license = {text = "MIT License"}
 classifiers = [
@@ -25,7 +25,7 @@ classifiers = [
   "Topic :: Scientific/Engineering :: Hydrology"
 ]
 
-dependencies = ["numpy", "xmipy"]
+dependencies = ["modflowapi"]
 dynamic = ["version"]
 
 [project.scripts]
