--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,3 +53,12 @@ pymf6 = "src/pymf6"
 
 [tool.setuptools_scm]
 write_to = "src/pymf6/_version.py"
+
+[tool.pixi.project]
+channels = ["conda-forge"]
+platforms = ["osx-arm64"]
+
+[tool.pixi.pypi-dependencies]
+pymf6 = { path = ".", editable = true }
+
+[tool.pixi.tasks]
