Add modflowapi as dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ classifiers = [
   "Topic :: Scientific/Engineering :: Hydrology"
 ]
 
-# dependencies = ["modflowapi"]
+dependencies = ["modflowapi"]
 dynamic = ["version"]
 
 [project.scripts]
